tests/files/flow_controller_tests/should_run/102.cmdr
x = 9.6;
print arccot(x);