tests/files/flow_controller_tests/should_fail/023.cmdr
x = "cat";
print ln(x);